gitops/tenants/tenant-common/overlays/prod/authserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authserver-ingress
spec:
  rules:
  - host: tenark.com
  tls:
  - hosts:
    - tenark.com
    secretName: keyvault-authserver-ingress-dev
