gitops/tenants/tenant-common/overlays/prod/httpapi-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpapi-host-ingress
spec:
  rules:
  - host: tenark.com
  tls:
  - hosts:
    - tenark.com
    secretName: keyvault-httpapi-host-ingress-dev
